Closed Bug 320585 Opened 19 years ago Closed 19 years ago

View source can miss a final = sign

Categories

(Core :: DOM: HTML Parser, defect, P4)

x86
Linux
defect

Tracking

()

RESOLVED FIXED
mozilla1.9alpha1

People

(Reporter: mrbkap, Assigned: mrbkap)

References

()

Details

Attachments

(1 file)

STEPS TO REPRODUCE: 1) Go to the URL in the URL field. 2) View the source ACTUAL RESULTS: We show: <f /> EXPECTED RESULTS: We show: <f /=>
Status: NEW → ASSIGNED
Priority: -- → P4
Attached patch FixSplinter Review
If we have an equals sign without a value, then we're not useless.
Attachment #206136 - Flags: superreview?(jst)
Attachment #206136 - Flags: review?(jst)
Comment on attachment 206136 [details] [diff] [review] Fix Please pretend that there are two &s in that changed line.
Comment on attachment 206136 [details] [diff] [review] Fix r+sr=jst
Attachment #206136 - Flags: superreview?(jst)
Attachment #206136 - Flags: superreview+
Attachment #206136 - Flags: review?(jst)
Attachment #206136 - Flags: review+
Depends on: 57724
Fixed on trunk.
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Comment on attachment 206136 [details] [diff] [review] Fix This is a trivial patch that makes view source not lie. I don't think this is 1.8.0.1 fodder, but I'd love to see this go into 1.8.1.
Attachment #206136 - Flags: approval1.8.1?
Attachment #206136 - Flags: approval1.8.1? → branch-1.8.1?(jst)
Attachment #206136 - Flags: branch-1.8.1?(jst) → branch-1.8.1+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: