bug 320585: View source can loose a final equals sign in an attribute if the preceeding character was a quote or slash. r+sr=jst